feat: 검색 버튼 구현 #5

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -349,6 +349,13 @@
     let publish = [[${publish}]];
     let author = [[${author}]];
 
+    
+    function searchBook() {
+        query = $('#search-box').val();
+        // cid는 카테고리 대/소분류 구현해야 적용 가능
+        location.href = "/result/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author;
+    }
+
     function applyFilter() {
         minprice = $("#min-price").val();
         maxprice = $("#max-price").val();
