--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -63,8 +63,6 @@
     }
 
     .search-box {
-
-        background: green;
         width: 1000px;
         height: 100px;
 
@@ -321,7 +319,7 @@
 <body>
 <div class="search-box">
 
-    <form action = "./result.html" name="searchData" method="get">
+    <form action = "./search" name="searchData" method="get">
         <select id="category" name="category" onchange="optionChange();" style="font-size: 13px; width:150px; height:60px;">
         <option style="color: white">대분류</option>
         <option value="a">건강 취미</option>
@@ -365,42 +363,20 @@
 </body>
 <div class="wrap">
     <div id="book_info_area" class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="book-box">
-            <div class="image-area">
-                <img src="https://image.aladin.co.kr/product/1604/31/cover200/8982032002_1.jpg" alt="My Image" />
+
+            <div class="book-box" type="button" th:onclick="|location.href='@{/detail/{id}(id=${id})}'|">
+                <div  class="image-area">
+                        <img th:src="${image}" alt="My Image" width="110" height="170"/>
+                </div>
+                <div class="desc-area">
+                    <h5 th:text="${title}" >에밀</h5>
+                    <h6 th:text="${price} + ' 원'">가격 : 35000 원</h6>
+                    <h6 th:text="'작가 : '+ ${author}">작가 : 장 자크 루소</h6>
+                    <h6 th:text="'출판사 : '+${publish}">출판사 : 육문사</h6>
+                    <h6 th:text="'별점 : ' + ${star} + ' / 발행년도 : ' + ${year} + '.' + ${month}">별점 : 8 / 발행년도 : 2012.3</h6>
+                </div>
             </div>
-            <div class="desc-area">
-                <h5>에밀</h5>
-                <h6>가격 : 35000 원</h6>
-                <h6>작가 : 장 자크 루소</h6>
-                <h6>출판사 : 육문사</h6>
-                <h6>별점 : 8 / 발행년도 : 2012.3</h6>
-            </div>
-        </div>
-        <div class="book-box">
-            <div  class="image-area">
-                <img th:src="${image}" alt="My Image" width="97"/>
-            </div>
-            <div class="desc-area">
-                <h5 th:text="${title}" >에밀</h5>
-                <h6 th:text="${price} + ' 원'">가격 : 35000 원</h6>
-                <h6 th:text="'작가 : '+ ${author}">작가 : 장 자크 루소</h6>
-                <h6 th:text="'출판사 : '+${publish}">출판사 : 육문사</h6>
-                <h6 th:text="'별점 : ' + ${star} + ' / 발행년도 : ' + ${year} + '.' + ${month}">별점 : 8 / 발행년도 : 2012.3</h6>
-            </div>
-        </div>
     </div>
-
-<!--    <h3 th:text="Test">Hello World, Thymeleaf Project.</h3>-->
-
-<!--    <div th:with="firstValue=${'타임리프'}">-->
-<!--        <h3 th:text="${firstValue}"></h3>-->
-<!--    </div>-->
-
-<!--    Hello <span th:text="${data1}"></span>-->
-
-    <h3 th:text="${name}"></h3>
-    <h3 th:text="${age}"></h3>
 
 </div>
 
