--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -309,19 +309,18 @@
     </div>
     <div class="info-area">
         <tr th:each="book : ${result}">
-            <div class="book-box" type="button" th:onclick="moveToDetail(${book.getId()})">
+            <div class="book-box" type="button" th:onclick="|location.href='@{/detail/{id}(id=${book.getId()})}'|">
                 <div class="image-area">
-                    <a th:href="@{/detail/{id}(id=${book.getId()})}">
-                        <img th:src="${book.getImage()}" alt="My Image" width="97">
-                    </a>
+                    <img th:src="${book.getImage()}" alt="My Image" width="97">
                 </div>
                 <div class="desc-area">
-                    <h5 th:text="${book.getTitle()}">에밀</h5>
-                    <h6 th:text="'가격 : '+${book.getPrice()}+' 원'">35000</h6>
-                    <h6 th:text="'작가 : '+${book.getAuthor()}">장 자크 루소</h6>
-                    <h6 th:text="'출판사 : '+${book.getAuthor()}">육문사</h6>
-                    <h6 th:text="'별점 : '+${book.getStar()}+' / 발행년도 : '+${book.getYear()}+'.'+${book.getMonth()}">
-                        82012.3</h6>
+                    <h6 th:text="${book.getTitle()}">에밀</h6>
+                    <span th:text="'가격 : '+${book.getPrice()}+' 원'">35000</span><br>
+                    <span th:text="'작가 : '+${book.getAuthor()}">장 자크 루소</span><br>
+                    <span th:text="'출판사 : '+${book.getPublish()}">육문사</span><br>
+                    <span th:text="'별점 : '+${book.getStar()}+' / 발행년도 : '+${book.getYear()}+'.'+${book.getMonth()}">
+                        82012.3
+                    </span>
                 </div>
             </div>
         </tr>
@@ -345,7 +344,7 @@
     function searchBook() {
         query = $('#search-box').val();
         // cid는 카테고리 대/소분류 구현해야 적용 가능
-        location.href = "/result/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author;
+        location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author;
     }
 
     function applyFilter() {
@@ -358,7 +357,7 @@
             year = $("#year option:selected").val();
             selectStar()
 
-            location.href = "/result/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author;
+            location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author;
         }
     }
 
