feat: 검색어 query로 변경#2

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -354,7 +354,7 @@
         <option>소분류</option>
     </select>
 
-        <input class="search" name="title" type="text" placeholder="검색어 입력" style="width: 470px">
+        <input class="search" name="query" type="text" placeholder="검색어 입력" style="width: 470px">
 
         <button id="search_btn" type="submit" value="search" style="font-size: 13px; width:70px; height:60px;">검색</button>
     </form>
