--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -60,7 +60,7 @@
             margin-left: 2%;
             border: 1px darkblue solid;
             border-radius: 8px;
-            height: 800px
+            height: 900px
             /*min-height: 1500px;*/
         }
 
@@ -138,8 +138,7 @@
         }
 
         #year {
-            width: 80%;
-            justify-content: center;
+            width: 100%;
         }
 
         /*책 정보 영역*/
@@ -203,24 +202,17 @@
     <input type="email" class="form-control" id="search-box" placeholder="검색">
 
     <input class="btn btn-primary" type="button" onclick="searchBook()" value="검색">
-
-    <select id="sort" class="form-select" aria-label="Default select example">
-        <option selected value="0">정렬</option>
-        <option value="1">이름순</option>
-        <option value="2">가격 높은순</option>
-        <option value="3">가격 낮은순</option>
-    </select>
 </div>
 <div class="mid-area">
     <div class="filter-area">
         <div>
             <h5 style="text-align: center" th:text="' 총 검색 결과 : ' + ${result.getTotalCount()}"></h5>
         </div>
-        <select id="year" class="form-select" aria-label="Default select example">
-            <option selected value="">발행년도</option>
-            <option value="2010">2010</option>
-            <option value="2000">2000</option>
-            <option value="1990">1990</option>
+        <select id="sort" class="form-select" aria-label="Default select example">
+            <option selected value="0">정렬</option>
+            <option value="1">이름순</option>
+            <option value="2">가격 높은순</option>
+            <option value="3">가격 낮은순</option>
         </select>
         <div class="star-area">
             <h3 class="star-point">별점</h3>
@@ -281,6 +273,14 @@
                 </div>
             </div>
         </div>
+        <div class="publish-area">
+            <h3>발행년도</h3>
+            <div class="price-input">
+                <input class="form-control form-control-sm" id="year" type="text"
+                       placeholder="1900년부터 입력 가능"
+                       aria-label=".form-control-sm example">
+            </div>
+        </div>
         <div class="price-area">
             <h3>가격 범위</h3>
             <div class="price-input">
@@ -339,19 +339,17 @@
     /*<![CDATA[*/
     const params = new URLSearchParams(location.search)
 
-    let cid = params.get('cid');
-    let query = params.get('query');
-    let totalRow = params.get('totalRow');
-    if (totalRow == null)
-        totalRow = '10';
-    let sort = [[${sort}]];
-    let year = [[${year}]];
-    let month = [[${month}]];
-    let star = [[${star}]];
-    let minprice = [[${minprice}]];
-    let maxprice = [[${maxprice}]];
-    let publish = [[${publish}]];
-    let author = [[${author}]];
+    let cid = params.get('cid') == null ? '' : params.get('cid');
+    let query = params.get('query') == null ? '' : params.get('query');
+    let totalRow = params.get('totalRow') == null ? '10' : params.get('totalRow');
+    let sort = params.get('sort') == null ? '' : params.get('sort');
+    let year = params.get('year') == null ? '' : params.get('year');
+    let month = params.get('month') == null ? '' : params.get('month');
+    let star = params.get('star') == null ? '' : params.get('star');
+    let minprice = params.get('minPrice') == null ? '' : params.get('minPrice');
+    let maxprice = params.get('maxPrice') == null ? '' : params.get('maxPrice');
+    let publish = params.get('publish') == null ? '' : params.get('publish');
+    let author = params.get('author') == null ? '' : params.get('author');
     let page = [[${result.getPage()}]];
     let totalCount = [[${result.getTotalCount()}]]
 
@@ -362,26 +360,25 @@
     }
 
     function movePage(changedPage) {
-        location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=" + changedPage;
+        location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minPrice=" + minprice + "&maxPrice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=" + changedPage;
     }
 
     function searchBook() {
         query = $('#search-box').val();
         // cid는 카테고리 대/소분류 구현해야 적용 가능
-        location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
+        location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minPrice=" + minprice + "&maxPrice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
     }
 
     function applyFilter() {
         minprice = $("#min-price").val();
         maxprice = $("#max-price").val();
-        if (checkPrice(minprice, maxprice)) {
+        if (checkPrice(minprice, maxprice) && checkYear($("#year").val())) {
             publish = $("#publish").val();
             author = $("#author").val();
             sort = $("#sort option:selected").val();
-            year = $("#year option:selected").val();
+            year = $("#year").val();
             selectStar()
-
-            location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minprice=" + minprice + "&maxprice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
+            location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minPrice=" + minprice + "&maxPrice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
         }
     }
 
@@ -425,6 +422,22 @@
         }
         if (Number(min) > Number(max)) {
             alert("최대 가격은 최소 가격보다 커야합니다.")
+            return false;
+        }
+        return true;
+    }
+
+    function checkYear(year) {
+        let isNumber = /^[0-9]+$/;
+        if (year.length == 0) {
+            year = 1901
+        }
+        if (year < 1900) {
+            alert("발행년도는 1900년 이후부터 입력이 가능합니다.");
+            return false;
+        }
+        if (!isNumber.test(year)) {
+            alert("발행년도는 숫자만 입력이 가능합니다.");
             return false;
         }
         return true;
